<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gwublue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="62dp"
            android:paddingBottom="15dp"
            android:src="@drawable/home_icon_svg"
            android:onClick="goHome" />

        <TextView
            android:id="@+id/GWtext"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="0dp"
            android:text="GW"
            android:textColor="@color/gwublue"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/GWdelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:text="DELIVERY"
            android:textColor="@color/gwublue"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_margin="0dp"
        android:background="@color/gwulightgold">
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_alignLeft="@id/orderSummary"
                android:text="MY CART"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cartIcon"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_toRightOf="@id/pageTitle"
                android:layout_marginTop="34dp"
                app:srcCompat="@drawable/shopping_cart"
                app:tint="@color/white"
                />

            <RelativeLayout
                android:id="@+id/orderSummary"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:alpha="0.5"
                android:background="@color/gwufieldblue">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/restaurantName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="4dp"
                        android:paddingBottom="0dp"
                        android:text="@string/restaurant_name"
                        android:textColor="@color/white"
                        android:autoSizeTextType="uniform" />

                        <RelativeLayout
                            android:id="@+id/orderItem1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/restaurantName"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/orderItem1quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_centerVertical="true"
                                android:padding="10dp"
                                android:autoSizeTextType="uniform"
                                android:background="@color/gwublue"
                                android:text="@string/orderItem1quantity"
                                android:textColor="@color/white" />

                            <TextView
                                android:id="@+id/orderItem1name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_toRightOf="@id/orderItem1quantity"
                                android:layout_centerVertical="true"
                                android:padding="10dp"
                                android:text="@string/orderItem1name"
                                android:textColor="@color/white"
                                android:autoSizeTextType="uniform" />

                            <TextView
                                android:id="@+id/orderItem1price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="10dp"
                                android:layout_toRightOf="@id/orderItem1name"
                                android:layout_marginTop="10dp"
                                android:layout_centerVertical="true"
                                android:padding="10dp"
                                android:text="@string/orderItem1price"
                                android:textColor="@color/white"
                                android:autoSizeTextType="uniform" />

                            <Button
                                android:id="@+id/buttonRemoveItem"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="10dp"
                                android:text="X"
                                android:textColor="@color/gwured"
                                android:textStyle="bold"
                                android:autoSizeTextType="uniform"
                                android:background="@drawable/round_button"
                                app:backgroundTint="@color/white" />

                        </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/orderItem1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/orderItem2quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_centerVertical="true"
                            android:padding="10dp"
                            android:autoSizeTextType="uniform"
                            android:background="@color/gwublue"
                            android:text="@string/orderItem2quantity"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/orderItem2name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_toRightOf="@id/orderItem2quantity"
                            android:layout_centerVertical="true"
                            android:padding="10dp"
                            android:text="@string/orderItem2name"
                            android:textColor="@color/white"
                            android:autoSizeTextType="uniform" />

                        <TextView
                            android:id="@+id/orderItem2price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="10dp"
                            android:layout_toRightOf="@id/orderItem2name"
                            android:layout_marginTop="10dp"
                            android:layout_centerVertical="true"
                            android:padding="10dp"
                            android:text="@string/orderItem2price"
                            android:textColor="@color/white"
                            android:autoSizeTextType="uniform" />

                        <Button
                            android:id="@+id/buttonRemoveItem2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:text="X"
                            android:textColor="@color/gwured"
                            android:textStyle="bold"
                            android:autoSizeTextType="uniform"
                            android:background="@drawable/round_button"
                            app:backgroundTint="@color/white" />

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/orderTotaltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/orderTotal"
                android:layout_alignBottom="@id/orderTotal"
                android:padding="15dp"
                android:text="TOTAL"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/orderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderSummary"
                android:layout_centerHorizontal="true"
                android:text="$70"
                android:textColor="@color/white"
                android:textSize="60sp"/>

            <TextView
                android:id="@+id/paymentMethodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderTotaltext"
                android:padding="15dp"
                android:text="PAYMENT METHOD"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/paymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderTotal"
                android:layout_toRightOf="@id/paymentMethodText"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:text="GWorld Card"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/changePaymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderTotal"
                android:layout_toRightOf="@id/paymentMethod"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:text="Change"
                android:textColor="@color/gwugreen"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/buttonPlaceOrder"
                android:layout_width="180dp"
                android:layout_height="47dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/paymentMethod"
                android:layout_marginTop="20dp"
                android:text="PLACE ORDER"
                android:textColor="@color/gwublue"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@drawable/round_button"
                app:backgroundTint="@color/white" />

            <TextView
                android:id="@+id/linkCancelOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonPlaceOrder"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:text="CLEAR CART"
                android:textColor="@color/gwured"
                android:textStyle="bold"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/gwuLogoLogin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/linkCancelOrder"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/gw_primary_2c_rev" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>